# AIBOM

./: .gitignore  AGENTS.md  AI_ASSET_INVENTORY.md  AI_BOM.json  CONTRIBUTING.md  README.md  SECURITY.md  aibom_generator.py  pyproject.toml  requirements-dev.in  requirements.txt
.github/workflows/: aibom.yml  ci.yml  security-ci.yml
aibom/: __init__.py  analyzer.py  bundle.py  cli.py  confidence.py  diffing.py  exporters.py  github_scan.py  presentation.py  storage.py  utils.py  validation.py
aibom/detectors/: __init__.py  dotnet_ast.py  go_ast.py  java_ast.py  js_ts_ast.py  protocol.py
aibom/risk/: heuristics.py
aibom/risk/rules/: __init__.py  base.py  exfil_surface.py  prompt_injection_surface.py  third_party_provider.py
aibom/schema/: aibom_v1.json
deploy/: Dockerfile  README.md
deploy/k8s/: aibom-generate.yaml
docs/: COMPLIANCE_MAPPING.md  FOR_AUDITORS.md  GITHUB_SCANNER_GUIDE.md  RISK_POLICY_FORMAT.md  SOC_DEPLOYMENT_GUIDE.md
examples/github_repo_samples/: README.md  repos.txt  run_github_examples.sh
examples/github_repo_samples/results/: aibom_repo.json  sample_project.json
examples/langchain_demo/: README.md
scripts/: check_license_policy.py
tests/: test_cli.py  test_exporters.py  test_github_scan.py  test_presentation.py  test_risk_rules.py
tests/fixtures/: export_input_aibom.json  golden_ai_profile.json  golden_aibom.json  golden_cyclonedx_export.json  golden_sarif_export.json  golden_spdx_export.json  golden_vex_export.json  invalid_aibom_missing_field.json  valid_aibom.json
website/: docs.html  index.html  script.js  styles.css
(+20 files in other folders)
